target_sources(elog PRIVATE
    elog_buffer_receptor.cpp
    elog_buffer.cpp
    elog_cache.cpp
    elog_comm_util_log_handler.cpp
    elog_common.cpp
    elog_config_loader.cpp
    elog_config_parser.cpp
    elog_config.cpp
    elog_dbg_util_log_handler.cpp
    elog_expression_parser.cpp
    elog_expression_tokenizer.cpp
    elog_field_selector.cpp
    elog_field_spec.cpp
    elog_filter.cpp
    elog_flush_policy.cpp
    elog_formatter.cpp
    elog_gc.cpp
    elog_http_client.cpp
    elog_http_config_loader.cpp
    elog_json_formatter.cpp
    elog_json_receptor.cpp
    elog_level.cpp
    elog_life_sign_filter.cpp
    elog_logger.cpp
    elog_pre_init_logger.cpp
    elog_private_logger.cpp
    elog_props_formatter.cpp
    elog_rate_limiter.cpp
    elog_record.cpp
    elog_report.cpp
    elog_report.h
    elog_rolling_bitset.cpp
    elog_schema_manager.cpp
    elog_shared_logger.cpp
    elog_source.cpp
    elog_string_tokenizer.cpp
    elog_stack_trace.cpp
    elog_stats.cpp
    elog_string_stream_receptor.cpp
    elog_string_receptor.cpp
    elog_target.cpp
    elog_time.cpp
    elog_tls.cpp
    elog_type_codec.cpp
    elog_win32_dll_event.cpp
    elog.cpp)

add_subdirectory(mon)
add_subdirectory(db)
add_subdirectory(msgq)
add_subdirectory(rpc)
add_subdirectory(sys)
add_subdirectory(async)
add_subdirectory(file)
add_subdirectory(msg)
add_subdirectory(net)
add_subdirectory(ipc)